--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RaygunSettings": {
+    "ApiKey": "YOUR_API_KEY_HERE"
+  },
   "AllowedHosts": "*"
 }
